--- a/cs511HwSolutions/hw13/latex/nicholas_ikechukwu.hw13.tex
+++ b/cs511HwSolutions/hw13/latex/nicholas_ikechukwu.hw13.tex
@@ -284,8 +284,8 @@ Argue why there cannot be a functor from this category to $\kappa$.
 
 \subsection*{My Simple Argument Against a Functor to \(\kappa\)}
 
-From the category given above, it forms forms a cycle with four objects and morphisms creating a loop. 
-We know that In category theory:
+From the category given above, it forms a cycle with four objects and morphisms creating a loop. 
+We know that in category theory:
 
 \begin{itemize}    
     \item The category \(\kappa\), as we had, does not have a structure that supports cyclic morphisms.
